calendar 추가 (근데 앞에 여백 왜 안되는지 모르겠음;;)

--- a/style.css
+++ b/style.css
@@ -22,7 +22,7 @@
 
 #add-button {
     width: 20%;
-    background-color: #d5ff18;
+    background-color: #3584eb;
     border-radius: 4px;
     border: 1px solid #41a3fe;
     color: white;
